--- a/css/styles.css
+++ b/css/styles.css
@@ -55,27 +55,59 @@
   padding-bottom: 20px;
   font-weight: bold;
 }
+.content {
+  padding: 0px 30px;
+}
 .snippet {
-  /*height: 350px;*/
-  background-color: white;
+  height: 600px;
+  /*background-color: lightgrey;*/
+  background-color: rgba(150, 150, 150, 0.75);
+  border-radius: 40px;
   padding: 15px;
 }
-.snippet h3 {
+.snippet .header {
   text-align: center;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 32px;
+  padding-bottom: 15px;
+  padding-top: 10px;
+  border-bottom: 2px solid #aad4ff;
 }
 .snippet img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 50px;
-  margin-bottom: 50px;
-  width: 200px;
-  height: 160px;
+  margin-top: 35px;
+  margin-bottom: 35px;
+  width: 75%;
 }
 .snippet p {
-  display:block;
+  /*display:block;*/
   margin-left: auto;
   margin-right: auto;
-  width: 220px;
+  width: 65%;
   text-align: center;
+  font-family: 'Kaushan Script', cursive;
+  font-size: 16px;
+  color: #000;
+}
+.snippet .button {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#7abcff+26,60abf8+45,60abf8+53,60abf8+53,4096ee+100 */
+  background: #7abcff; /* Old browsers */
+  background: -moz-linear-gradient(top, #7abcff 26%, #60abf8 45%, #60abf8 53%, #60abf8 53%, #4096ee 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(top, #7abcff 26%,#60abf8 45%,#60abf8 53%,#60abf8 53%,#4096ee 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(to bottom, #7abcff 26%,#60abf8 45%,#60abf8 53%,#60abf8 53%,#4096ee 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7abcff', endColorstr='#4096ee',GradientType=0 ); /* IE6-9 */
+  color: #fff !important;
+  /*background-color: #155FA9;*/
+  display: inline-block;
+  margin-top: 6px;
+  margin-left: 25px;
+  padding: 10px;
+  text-align: center;
+  border: 2px solid black;
+  border-radius: 5px;
+  font-family: 'Open Sans Condensed', sans-serif;
+  font-size: 18px;
+  color: #000;
 }
