--- a/css/styles.css
+++ b/css/styles.css
@@ -100,9 +100,13 @@
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7abcff', endColorstr='#4096ee',GradientType=0 ); /* IE6-9 */
   color: #fff !important;
   /*background-color: #155FA9;*/
-  display: inline-block;
-  margin-top: 6px;
-  margin-left: 25px;
+  display: block;
+  width: 90px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15px;
+  /*margin-top: 6px;*/
+  /*margin: auto;*/
   padding: 10px;
   text-align: center;
   border: 2px solid black;
